tests/miniJava/neg/004400_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] class java { public static void Main ( String [ ] java ) { { } } } ( ) { return 0 ; } }
